# applovin_ios_rs

./: .gitignore  Package.swift  README.md  env_example.xcconfig  justfile
.github/workflows/: ci.yaml
Sources/applovin_ios_rs/: adAppLovinController.swift  ads.swift  applovin_ios_rs.swift  init.swift
Tests/applovin_rsTests/: applovin_rsTests.swift
applovin_ios_rs/: .gitignore  Cargo.toml  build-rust-release.sh  build-rust.sh  build-swift-package.sh
applovin_ios_rs/src/: lib.rs  native.rs
